testData/annotators/functions/NotEnoughArguments_expected.Camel
${<error descr="Expected: headerAs(key: String, type: Class)">headerAs()</error>}